bitfields/tests/compile_error_cases/bitfield_field_types_bits_less_than_bitfield_type_size.rs
use bitfields::bitfield;

#[bitfield(u32)]
pub struct Bitfield {
    a: u8,
    b: u8,
    c: u8,
}

fn main() {}
